--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -34,7 +34,16 @@ spring:
             hibernate.generate_statistics: true
             hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     mail:
-        host: localhost
+        host: smtp.gmail.com
+                port: 587
+                username: plumbeerapp@gmail.com
+                password: Plumbeer2u
+                protocol: smtp
+                tls: true
+                properties.mail.smtp:
+                    auth: true
+                    starttls.enable: true
+                    ssl.trust: smtp.gmail.com
     messages:
         cache-seconds: 1
     thymeleaf:
